# autoresearch-rtx-6000

./: .gitignore  PLAN.md  prepare.py  train.py  ttt_note.md  ttt_rl.md
rl_pipeline/: .gitignore  config.py  env.py  pyproject.toml  requirements.txt  rl_evaluate.py  rl_train.py  run_baseline.sh  setup_server.sh
rl_pipeline/algos/: __init__.py  grpo.py  none.py  ppo.py
ttt_autoresearch/: env.py  model.py  puct.py  pyproject.toml  setup_and_run.sh  smoke_test.py  train.py
