[project]
name = "rl-pipeline"
version = "0.1.0"
description = "RL training pipeline for autoresearch agents"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.9.0",
    "transformers>=4.52.0",
    "accelerate>=1.6.0",
    "huggingface_hub>=0.30.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
