[project]
name = "ttt-autoresearch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch==2.9.1",
    "transformers>=4.52.0",
    "peft>=0.15.0",

    "huggingface-hub>=0.30.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
